Refactor: #정산 배치 처리 구조 정리
scope: settlement

summary: 정산 대상 적재, 정산 생성, 정산 이체 흐름을 강의 기준 컴포넌트 구조로 정리

cleanup: 미사용 정산 컴포넌트와 projection 제거

verification: core-api compileJava, db-core compileJava, settlement/cancel related tests

Generated-by: Codex