@@ -1,71 +1,59 @@
 package io.april2nd.commerce.core.domain;
 
 import io.april2nd.commerce.core.enums.SettlementState;
-import io.april2nd.commerce.storage.db.core.SettlementRecentAmount;
+import io.april2nd.commerce.storage.db.core.MerchantAmountProjection;
 import io.april2nd.commerce.storage.db.core.SettlementRepository;
-import io.april2nd.commerce.storage.db.core.SettlementTargetRepository;
-import io.april2nd.commerce.storage.db.core.SettlementTargetSummary;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
-import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
 public class SettlementReader {
-    private final SettlementTargetRepository settlementTargetRepository;
     private final SettlementRepository settlementRepository;
 
-    public List<SettlementSummary> read(LocalDate settleDate) {
-        List<SettlementTargetSummary> targetSummaries = settlementTargetRepository.findSummary(settleDate);
-        Map<Long, SettlementRecentAmount> recentAmountsByMerchant = readRecentAmounts(settleDate, targetSummaries);
-
-        return targetSummaries
-                .stream()
-                .map(summary -> new SettlementSummary(
-                        summary.merchantId(),
-                        summary.settlementDate(),
-                        summary.targetAmount(),
-                        recentAmount(recentAmountsByMerchant, summary.merchantId())
-                ))
-                .toList();
-    }
-
-    private Map<Long, SettlementRecentAmount> readRecentAmounts(
-            LocalDate settleDate,
-            List<SettlementTargetSummary> targetSummaries
-    ) {
-        Collection<Long> merchantIds = targetSummaries.stream()
-                .map(SettlementTargetSummary::merchantId)
-                .collect(Collectors.toSet());
-
+    public Map<Long, BigDecimal> readRecentSalesAmounts(LocalDate settlementDate, Collection<Long> merchantIds) {
         if (merchantIds.isEmpty()) {
-            return Map.of();
+            return Collections.emptyMap();
         }
 
-        return settlementRepository.findRecentAmounts(
+        LocalDate startDate = settlementDate.minusMonths(1);
+        LocalDate endDate = settlementDate.minusDays(1);
+
+        return settlementRepository.sumOriginalAmountByMerchantIdInAndSettlementDateBetweenAndState(
                         merchantIds,
-                        settleDate.minusMonths(1),
-                        settleDate,
+                        startDate,
+                        endDate,
                         SettlementState.SENT
-                )
-                .stream()
+                ).stream()
                 .collect(Collectors.toMap(
-                        SettlementRecentAmount::merchantId,
-                        Function.identity()
+                        MerchantAmountProjection::getMerchantId,
+                        MerchantAmountProjection::getAmount
                 ));
     }
 
-    private BigDecimal recentAmount(Map<Long, SettlementRecentAmount> recentAmountsByMerchant, Long merchantId) {
-        return Optional.ofNullable(recentAmountsByMerchant.get(merchantId))
-                .map(SettlementRecentAmount::amount)
-                .orElse(BigDecimal.ZERO);
+    public List<Settlement> readByState(SettlementState state) {
+        return settlementRepository.findByState(state)
+                .stream()
+                .map(it ->
+                        new Settlement(
+                                it.getId(),
+                                it.getMerchantId(),
+                                it.getSettlementDate(),
+                                it.getOriginalAmount(),
+                                it.getFeeAmount(),
+                                it.getFeeRate(),
+                                it.getSettlementAmount(),
+                                it.getState()
+                        )
+                )
+                .toList();
     }
 }
